AG-1555 fix missing ellipsis on truncated header text

--- a/community-modules/core/src/styles/structural/_common-structural.scss
+++ b/community-modules/core/src/styles/structural/_common-structural.scss
@@ -374,6 +374,10 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     text-overflow: ellipsis;
 }
 
+.ag-header-cell-comp-wrapper {
+    width: 100%;
+}
+
 .ag-header-cell-wrap-text .ag-header-cell-comp-wrapper {
     white-space: normal;
 }
